fix text-align:center menu

--- a/app/assets/scss/components/header/_header.scss
+++ b/app/assets/scss/components/header/_header.scss
@@ -115,3 +115,7 @@ span.version {
   color: $white;
   margin-left: 5px;
 }
+
+ul.menus li{
+  text-align: center;
+}
